# genaiapplication

./: .gitignore  README.md
Auth/: readme.md
Auth/auth_system/: alembic.ini  env.example.txt  main.py  requirements.txt
agentic_ai/: master_agentic_framework.md
ai_core/: __init__.py  debug.py  examples.py  main.py  requirements.txt  test_gemini.py
ai_core/clients/: __init__.py  base_client.py  factory.py  litellm_client.py
ai_core/config/: __init__.py  providers.py  settings.py
ai_core/core/: __init__.py  chatbot_engine.py  response_handler.py  stream_handler.py
ai_core/documents/: __init__.py  context_builder.py  document_processor.py
ai_core/models/: __init__.py  schemas.py
ai_core/session/: __init__.py  feedback_collector.py  history_manager.py  session_manager.py
ai_core/utils/: __init__.py  exceptions.py  logger.py
chatbot/: .dockerignore  Dockerfile  README.md  conversion.py  docker-compose.frontend.yml  docker-compose.yml  history.py  ragconfig.yaml  requirements.txt  rethinker_retrieval.py  test_chunking.md  test_stream.py  torchchuck.py  torchvectorbase.py  upload_res.json  vllm_generation.py
chatbot/api/: __init__.py  cache.py  config.py  database.py  dependencies.py  exceptions.py  main.py  middleware.py  schemas.py  task_manager.py
chatbot/data/: api.db  api.db-shm  api.db-wal  chat_history.db  chat_history.db-shm  chat_history.db-wal  test_api.db
chatbot/frontend/: Dockerfile  index.html  nginx.conf  (+4 more)
data_base/: .coverage  Dockerfile  README.md  alembic.ini  docker-compose.yml  pytest.ini  requirements.txt
doc/: Rules.md  main.py  rules_development.md  test1.md
inference_core/: README.md  pyproject.toml
inference_core/inference_core/: api.py  config.py  engine.py  errors.py  observability.py  providers.py
(+194 files in other folders)
